# Hackathon

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/: financial_report.md  slack_conversations.md  task_board.md
hackathon/: __main__.py  agent.py  app.py  audio.py  config.py  delivery.py  interrupt_service.py  main.py  rag.py  stt.py  turn_detection.py  turn_detector.py  ui.py
hackathon/rag/: base.py  light.py  stuffing.py
hackathon/voiceover/: __init__.py  audio.py  devices.py  tts.py
